--- a/0306/index.css
+++ b/0306/index.css
@@ -1,23 +1,22 @@
 * {
-    margin: 0%;
-    padding: 0%;
-    box-sizing:border-box;
-    font-family: Arial;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-
-header{
+header {
     text-align: center;
-    margin: auto;
     width: 500px;
+    margin: auto;
     margin-top: 100px;
 }
 
 header h1:first-of-type {
     font-weight: normal;
 }
-header p{
-    margin-top: 20px;
 
-
+header p:first-of-type{
+    margin-top: 20px;;
 }
+
