--- a/0306/index.css
+++ b/0306/index.css
@@ -36,12 +36,17 @@ header p:first-of-type{
 .wrapper {
     display: grid;
     grid-template-columns: auto;
-    grid-gap: 15px;
+        grid-gap: 15px;
     margin: 0 20px 0;
 }
 
 @media screen and (min-width: 800px) {
     .wrapper{
+        grid-template-areas: 
+                "..... team ..... "
+                "super team calc"
+                "super karma calc"
+                "..... karma .....";
         grid-template-columns: 1fr 1fr 1fr;
         margin: 0 150px 0;
     }
@@ -51,37 +56,20 @@ header p:first-of-type{
     }
 
     .card:nth-of-type(1) {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 4;
+        grid-area: super;
     }
     
     .card:nth-of-type(2) {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 3;
+        grid-area: team;
     }
     
     .card:nth-of-type(3) {
-        grid-column: 2 / 3;
-        /*grid-column-start: 2;
-        grid-column-end: 3;*/
-        grid-row: 3 / 5;
-        /*grid-row-start: 3;
-        grid-row-end: 5;*/
+      grid-area: karma;
     }
     
     .card:nth-of-type(4) {
-        grid-column: 3 / span 1;
-        /*grid-column: 3 / 4;*/
-        /*grid-column-start: 2;
-        grid-column-end: 3;*/
-        grid-row: 2 / span 2;
-        /*grid-row: 2 / 4;*/
-        /*grid-row-start: 3;
-        grid-row-end: 5;*/
+       grid-area: calc;
     }
+    
 }
 
