--- a/0306/index.css
+++ b/0306/index.css
@@ -5,9 +5,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+img {
+    display: block;
+}
+
 header {
     text-align: center;
-    width: 500px;
     margin: auto;
     margin-top: 100px;
 }
@@ -17,6 +20,29 @@ header h1:first-of-type {
 }
 
 header p:first-of-type{
-    margin-top: 20px;;
+    margin-top: 20px;
 }
+
+.card {
+    border-radius: 0.5rem;
+    border: 1px solid black;
+    box-shadow: 0 0.5rem 1rem -0.5rem #333;
+}
+
+.card img {
+    margin-left: auto;
+}
+
+.wrapper {  
+    margin: 0 20px 0;
+}
+
+@media screen and (min-width: 800px) {
+
+
+    header {
+        width: 500px;
+    }
+}
+  
 
