--- a/0306/index.css
+++ b/0306/index.css
@@ -34,7 +34,14 @@ header p:first-of-type{
 }
 
 .wrapper {  
-    margin: 0 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.card{
+    flex-shrink: 1;
+    flex-grow: 1;
+    flex-basis: 0;
 }
 
 @media screen and (min-width: 800px) {
@@ -42,6 +49,20 @@ header p:first-of-type{
 
     header {
         width: 500px;
+    }
+    .wrapper{
+        flex-direction: row;
+            align-items: center;
+
+    }
+    .together{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        flex-shrink: 1;
+        flex-grow: 1;
+        flex-basis: 0;
+    
     }
 }
   
